@@ -1,1 +1,0 @@
-Federico Ressi <federico.ressi@intel.com>
